<resources>
    <string name="app_name">权限极简</string>
    <string name="button_only_check">只检测权限状态</string>
    <string name="button_only_apply">仅申请，不需要结果</string>
    <string name="button_need_result">需要权限申请通过/拒绝回调</string>
    <string name="button_result_dismiss_ask">需要权限禁止询问回调</string>
    <string name="button_endlessly">强制需要权限(慎用)</string>
    <string name="button_request_with_explain">申请权限附带说明(推荐)</string>
    <string name="button_for_notification">通知栏权限</string>
    <string name="button_for_floatwindow">悬浮窗权限</string>
    <string name="button_for_gps">定位服务</string>
    <string name="permission_explain_call">拨打电话 - 需要这个权限来调用拨打电话功能</string>
    <string name="permission_explain_camera">相机 - 需要这个权限来实现照相功能</string>
</resources>
